# day5/traderapi/docs/swagger.json
@@ -1,7 +1,71 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is a sample service for managing Traders",
+        "title": "Traders API",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "API Support",
+            "email": "param@swagger.io"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0"
     },
-    "paths": {}
+    "host": "localhost:7070",
+    "basePath": "/",
+    "paths": {
+        "/traders": {
+            "post": {
+                "description": "Create a new trader with the input paylod",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "traders"
+                ],
+                "summary": "Create a new trader",
+                "parameters": [
+                    {
+                        "description": "Create trader",
+                        "name": "trader",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Trader"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Trader"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "models.Trader": {
+            "type": "object",
+            "properties": {
+                "doj": {
+                    "type": "string"
+                },
+                "traderId": {
+                    "type": "integer"
+                },
+                "traderName": {
+                    "type": "string"
+                }
+            }
+        }
+    }
 }
