# day5/traderapi/main.go
@@ -2,7 +2,7 @@ package main
 
 import (
 	"github.com/gorilla/mux"
-	_ "github.com/necws/day5/traderapi/docs" // docs is generated by Swag CLI, you have to import it.
+	_ "github.com/necws/day5/traderapi/docs"
 	"github.com/necws/day5/traderapi/stores"
 	_ "github.com/swaggo/http-swagger"
 	httpSwagger "github.com/swaggo/http-swagger"
@@ -10,6 +10,16 @@ import (
 	"net/http"
 )
 
+// @title Traders API
+// @version 1.0
+// @description This is a sample service for managing Traders
+// @termsOfService http://swagger.io/terms/
+// @contact.name API Support
+// @contact.email param@swagger.io
+// @license.name Apache 2.0
+// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
+// @host localhost:7070
+// @BasePath /
 func main() {
 
 	router := mux.NewRouter()
@@ -26,7 +36,7 @@ func main() {
 	// Initialize db connection
 	stores.InitDB()
 
-	log.Fatal(http.ListenAndServe(":7070", router))
+	//log.Fatal(http.ListenAndServe(":7070", router))
 
 	// Swagger
 	router.PathPrefix("/swagger").Handler(httpSwagger.WrapHandler)
